add : ContentType : 컨텐츠 타입 객체 생성을 통한 다양한 형식의 타입 지원

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,31 @@
     <title>👀NOT FOUND 404👀</title>
 </head>
 <body>
-
+<h1>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+    👀NOT FOUND 404👀 <br>
+</h1>
 </body>
 </html>
