--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -76,7 +76,7 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/user/login">
+          <form name="question" method="post" action="/user/login" onsubmit="return validateForm()">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input class="form-control" id="userId" name="userId" placeholder="User ID">
@@ -98,3 +98,18 @@
 <script src="../js/scripts.js"></script>
 	</body>
 </html>
+
+<script>
+    function validateForm() {
+        // 사용자 아이디와 비밀번호 입력값 가져오기
+        const userId = document.getElementById("userId").value;
+        const password = document.getElementById("password").value;
+
+        // 입력값이 비어있는 경우 폼 제출 막기
+        if (userId === "" || password === "") {
+            alert("사용자 아이디와 비밀번호를 모두 입력해주세요.");
+            return false;
+        }
+        return true;
+    }
+</script>
