--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <% SESSION.IS_PRESENT <li><a><% SESSION.GET_USERNAME %></a></li> %>
                 <li class="active"><a href="index.html">Posts</a></li>
-                <li><a href="user/login.html" role="button">로그인</a></li>
+                <% SESSION.IS_EMPTY <li><a href="user/login.html" role="button">로그인</a></li> %>
                 <li><a href="user/form.html" role="button">회원가입</a></li>
                 <!--
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
