feat: 동적 html 응답을 위한 기존 html 파일 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,27 +90,13 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>2022-1-19</td>
-                    <td>호눅스</td>
-                    <td><a href="./qna/show.html">안녕하세요~ 크롱입니다.</a></td>
-                </tr>
-                <tr>
-                    <td>2022-1-17</td>
-                    <td>예언자</td>
-                    <td><a href="./qna/show.html">내일 MS가 블리자드를 합병할 것입니다!</a></td>
-                </tr>
-                <tr>
-                    <td>2022-1-15</td>
-                    <td>침착맨</td>
-                    <td><a href="./qna/show.html">추천 웹툰: 이말년 서유기</a></td>
-                </tr>
+                    ${articleList}
                 </tbody>
             </table>
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-3 qna-write">
-                    <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">글쓰기</a>
+                    <a href="/article/write" class="btn btn-primary pull-right" role="button">글쓰기</a>
                 </div>
             </div>
         </div>
