--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -70,7 +70,7 @@
                 <li class="active"><a href="../index.html">Posts</a></li>
                 <li only_non_user="true"><a href="../user/login.html" role="button">로그인</a></li>
                 <li only_non_user="true"><a href="../user/form.html" role="button">회원가입</a></li>
-                <li only_login_user="true"><a href="#" role="button">로그아웃</a></li>
+                <li only_login_user="true"><a href="../user/logout" role="button">로그아웃</a></li>
                 <li only_login_user="true"><a href="#" role="button">개인정보수정</a></li>
             </ul>
         </div>
