--- a/src/main/resources/templates/qna/write.html
+++ b/src/main/resources/templates/qna/write.html
@@ -78,8 +78,8 @@
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="">
               <div class="form-group">
-                  <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                  <label for="author">글쓴이</label>
+                  <input class="form-control" id="author" name="author" placeholder="글쓴이"/>
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
