--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -63,11 +63,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
+                not_login::
                 <li class="active"><a href="../index.html">Posts</a></li>
                 <li><a href="../user/login.html" role="button">로그인</a></li>
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
+                ::not_login
+                login::
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
+                ::login
             </ul>
         </div>
     </div>
@@ -90,7 +94,7 @@
                   <textarea name="contents" id="contents" rows="5" class="form-control"></textarea>
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
-              <div class="clearfix" />
+              <div class="clearfix"></div>
           </form>
         </div>
     </div>
