--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -63,11 +63,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
+                not_login::
                 <li class="active"><a href="../index.html">Posts</a></li>
                 <li><a href="../user/login.html" role="button">로그인</a></li>
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
+                ::not_login
+                login::
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
+                ::login
             </ul>
         </div>
     </div>
@@ -183,7 +187,7 @@
                                   <textarea class="form-control" placeholder="Update your status"></textarea>
                               </div>
                               <button class="btn btn-success pull-right" type="button">답변하기</button>
-                              <div class="clearfix" />
+                              <div class="clearfix"></div>
                           </form>
                       </div>
                   </div>
