--- a/src/main/resources/templates/user/login_failed.html
+++ b/src/main/resources/templates/user/login_failed.html
@@ -39,7 +39,9 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                login::
+                <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                ::login
             </ul>
         </div>
     </div>
@@ -63,11 +65,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
+                not_login::
                 <li class="active"><a href="../index.html">Posts</a></li>
                 <li><a href="../user/login.html" role="button">로그인</a></li>
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
+                ::not_login
+                login::
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
+                ::login
             </ul>
         </div>
     </div>
@@ -87,7 +93,7 @@
                   <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">로그인</button>
-              <div class="clearfix" />
+              <div class="clearfix"></div>
           </form>
         </div>
     </div>
