--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -39,7 +39,9 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                login::
+                <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                ::login
             </ul>
         </div>
     </div>
