--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,8 +71,6 @@
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
                 -->
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
@@ -133,7 +131,7 @@
                 </ul>
               </div>
               <div class="col-md-3 qna-write">
-                  <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">질문하기</a>
+                  <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">글쓰기</a>
               </div>
           </div>
         </div>
