--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -83,6 +83,7 @@
                 </tr>
               </thead>
               <tbody>
+                ${userList}
               </tbody>
           </table>
         </div>
