--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -118,7 +118,7 @@
                       </div>
                   </div>
               </li>
-          </ul>
+          </ul>     <!-- list finish -->
           <div class="row">
               <div class="col-md-3"></div>
               <div class="col-md-6 text-center">
