feat: 코드 최적화와 책임 분리를 위한 피어 세션 피드백 반영
- 응답 반환하는 부분을 DispatcherServlet에서 Requesthandler로 책임 분리
- Servlet과 JSP 스타일이 혼용 되어 있어 스타일 통일
- SessionStorage 책임 분리 -> UserId 값이 아닌 SessionValue 반환하도록 수정
- 싱글톤 패턴을 적용하여 DispatcherServlet과 AnnotationProcessor 객체 생성이 남용되지 않게 변경 -> 이를 통해 성능 개선
- SignUpController, LoginController -> UserController로 통합

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -90,7 +90,17 @@
               </thead>
               login::
               <tbody>
-              :model:
+              for::
+              <tr>
+                  <th scope="row">:i:</th>
+                  <td>:model.userId:</td>
+                  <td>:model.name:</td>
+                  <td>:model.email:</td>
+                  <td>
+                      <a href="#" class="btn btn-success" role="button"> 수정 </a>
+                  </td>
+              </tr>
+              ::for
               </tbody>
               ::login
           </table>
