--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse2">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Posts</a></li>
+                        <dynamic id="userName"></dynamic>
+                        <li><a href="index.html">Posts</a></li>
                         <dynamic id="login"></dynamic>
                         <dynamic id="signUp"></dynamic>
                         <dynamic id="logout"></dynamic>
