--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -87,15 +87,13 @@
                       </div>
                       <div class="article-header-text">
                           <a href="/users/92/kimmunsu" class="article-author-name">kimmunsu</a>
-                          <a href="/questions/413" class="article-header-time" title="퍼머링크">
-                              2015-12-30 01:47
+                          <a href="/questions/413" class="article-header-time" title="퍼머링크" id="board-time">2015-12-30 01:47
                               <i class="icon-link"></i>
                           </a>
                       </div>
                   </div>
                   <div class="article-doc">
-                      <p>A 에 의존성을 가지는 B라는 클래스가 있습니다.</p><p>B라는 클래스는 InitializingBean 을 상속하고 afterPropertiesSet을 구현하고 있습니다.
-                      서버가 가동되면서 bean들이 초기화되는 시점에 B라는 클래스의 afterPropertiesSet 메소드는</p><p>A라는 클래스의 특정 메소드인 afunc()를 호출하고 있습니다.</p>
+                      <p id="board-contents">A 에 의존성을 가지는 B라는 클래스가 있습니다.</p><p>B라는 클래스는 InitializingBean 을 상속하고 afterPropertiesSet을 구현하고 있습니다. 서버가 가동되면서 bean들이 초기화되는 시점에 B라는 클래스의 afterPropertiesSet 메소드는</p><p>A라는 클래스의 특정 메소드인 afunc()를 호출하고 있습니다.</p>
                   </div>
                   <div class="article-utils">
                       <ul class="article-utils-list">
