--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -63,11 +63,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="../user/login.html" role="button">로그인</a></li>
-                <li><a href="../user/form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li><a href="../index.html">Posts</a></li>
+                <li><a href="../user/login.html" ${login} role="button">로그인</a></li>
+                ${user}
+                <li><a href="../user/form.html" ${login} role="button">회원가입</a></li>
+                <li><a href="../user/logout" ${logout} role="button">로그아웃</a></li>
+                <li><a href="#" ${logout} role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
