--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Error</title>
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 48px;
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+
+        a {
+            color: #069;
+        }
+    </style>
 </head>
 <body>
-<h1>ERROR</h1>
-<a href="../index.html" class="navbar-brand"><h3>메인 화면으로 돌아가기</h3></a>
+<h1>404</h1>
+<p>Sorry, the page you're looking for cannot be found!</p>
+<a href="./index.html">Go Home</a>
 </body>
 </html>
