[기능] list.html 파일 요청 시 로그인 상태에 따라 다른 화면을 보여주도록 구현
- UserListController에서 로그인 상태일 경우 attributes를 설정하도록 구현(user들의 list를 받아와서 태그를 넣어주었다.)

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -84,7 +84,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr><th scope="row">1</th> <td>javajigi</td> <td>자바지기</td> <td>javajigi@sample.net</td><td><a href="#" class="btn btn-success" role="button">수정</a></td></tr>
+                ${userList}
               </tbody>
           </table>
         </div>
