Feat: 404 외 error Page 추가
Internal Server Error(500) 페이지 추가

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 48px;
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-
-        a {
-            color: #069;
-        }
-    </style>
+    <title>Error Page</title>
 </head>
 <body>
-<h1>404</h1>
-<p>Sorry, the page you're looking for cannot be found!</p>
-<a href="./index.html">Go Home</a>
+<h1>Error</h1>
+<p>Error Page</p>
 </body>
 </html>
