--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -68,8 +68,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>
-
-                <li><a href="../user/login.html" role="button">로그인</a></li>
+                <li><a href="rend:{href:../user/login.html}" role="button">rend:{userId:로그인}</a></li>
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
                 <li><a href="../user/logout" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
@@ -91,22 +90,7 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>javajigi</td>
-                    <td>자바지기</td>
-                    <td>javajigi@sample.net</td>
-                    <td><a href="#" class="btn btn-success" role="button">수정</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>slipp</td>
-                    <td>슬립</td>
-                    <td>slipp@sample.net</td>
-                    <td><a href="#" class="btn btn-success" role="button">수정</a></td>
-                </tr>
-                </tbody>
+                <custom:{body}>user</custom:{body}>
             </table>
         </div>
     </div>
