--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
             	<span class="icon-bar"></span>
             </button>            
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse2">
+        <diev class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.html">Posts</a></li>
                 <li><a href="user/login.html" role="button">로그인</a></li>
@@ -74,7 +74,7 @@
                 <li><a href="user/logout" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
-        </div>
+        </diev>
     </div>
 </div>
 
