--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -16,7 +16,7 @@
     <div class="col-md-12">
         <div class="navbar-header">
 
-            <a class="navbar-brand" href="/index.html">SLiPP</a>
+            <a class="navbar-brand" href="/index">SLiPP</a>
             <button class="navbar-toggle" data-target="#navbar-collapse1" data-toggle="collapse" type="button">
                 <i class="glyphicon glyphicon-search"></i>
             </button>
