--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -1,3 +1,4 @@
+#{DYNAMIC_RENDER}
 <!DOCTYPE html>
 <html lang="kr">
 <head>
@@ -63,10 +64,11 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="../user/login.html" role="button">로그인</a></li>
-                <li><a href="../user/form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li><a href="/user/login.html" role="button" #{DISPLAY_ON_LOGOUT}>로그인</a></li>
+                <li><a href="/user/form.html" role="button" #{DISPLAY_ON_LOGOUT}>회원가입</a></li>
+                <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>${username}</a></li>
+                <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>로그아웃</a></li>
+                <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>개인정보수정</a></li>
             </ul>
         </div>
     </div>
