fix: Contents-Length 설정 오류

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                    $[articleList: <tr></tr><td>${::createDate}</td> <td>${::username}</td> <td><a href="/article/view?articleId=${::articleId}">${::title}</a></td></tr>]
+                    $[articleList: <tr><td>${::createDate}</td> <td>${::username}</td> <td><a href="/article/view?articleId=${::articleId}">${::title}</a></td></tr>]
                 </tbody>
             </table>
             <div class="row">
