--- a/src/main/resources/templates/user/login_failed.html
+++ b/src/main/resources/templates/user/login_failed.html
@@ -68,7 +68,7 @@
                 <li><a href="/user/login.html" role="button" #{DISPLAY_ON_LOGOUT}>로그인</a></li>
                 <li><a href="/user/form.html" role="button" #{DISPLAY_ON_LOGOUT}>회원가입</a></li>
                 <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>${username}</a></li>
-                <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>로그아웃</a></li>
+                <li><a href="/user/logout" role="button" #{DISPLAY_ON_LOGIN}>로그아웃</a></li>
                 <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>개인정보수정</a></li>
             </ul>
         </div>
