feat: 동적 렌더링을 통한 에러 페이지 응답 구현

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -40,7 +40,7 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li class="active"><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
             </ul>
         </div>
     </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>
+                <li><a href="../index.html">Posts</a></li>
                 <li><a href="/user/login.html" role="button" #{DISPLAY_ON_LOGOUT}>로그인</a></li>
                 <li><a href="/user/form.html" role="button" #{DISPLAY_ON_LOGOUT}>회원가입</a></li>
                 <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>${username}</a></li>
