--- a/src/main/resources/templates/user/login_failed.html
+++ b/src/main/resources/templates/user/login_failed.html
@@ -64,8 +64,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="/user/login.html" role="button" #{DISPLAY_ON_LOGOUT}>로그인</a></li>
+                <li><a href="../index.html">Posts</a></li>
+                <li class="active"><a href="/user/login.html" role="button" #{DISPLAY_ON_LOGOUT}>로그인</a></li>
                 <li><a href="/user/form.html" role="button" #{DISPLAY_ON_LOGOUT}>회원가입</a></li>
                 <li><a href="#" role="button" #{DISPLAY_ON_LOGIN}>${username}</a></li>
                 <li><a href="/user/logout" role="button" #{DISPLAY_ON_LOGIN}>로그아웃</a></li>
