feat: 기능 명세를 잘못 이해해 해당 내용 반영
- [x] 로그인 시 상단 바에 회원 이름 명시
- [x] list 접근 버튼이 비로그인 시 없는게 아니라 로그인 창으로 이동하도록 변경
- [x] View.html의 동적 html 처리에 대한 테스트 코드 작성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,8 +41,11 @@
                 </ul>
              </li>
               login::
-             <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+              <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
               ::login
+              not_login::
+              <li><a href="./user/login.html"><i class="glyphicon glyphicon-user"></i></a></li>
+              ::not_login
            </ul>
         </div>	
      </div>	
@@ -72,6 +75,7 @@
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
                 ::not_login
                 login::
+                <li><a>:model.name:님! 환영합니다.</a></li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
                 ::login
