--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -42,6 +42,9 @@
                 login::
                 <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
                 ::login
+                not_login::
+                <li><a href="./user/login.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                ::not_login
             </ul>
         </div>
     </div>
@@ -70,6 +73,7 @@
                 <li><a href="../user/form.html" role="button">회원가입</a></li>
                 ::not_login
                 login::
+                <li>:model.name:님! 환영합니다.</li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
                 ::login
