--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -88,10 +88,10 @@
                             <img class="media-object" src="../images/80-text.png">
                         </a>
                         <div class="media-body">
-                            <h4 class="media-heading">rend:{username:자바지기}</h4>
+                            <h4 class="media-heading">rend:{username: }</h4>
                             <p>
                                 <a href="#" class="btn btn-xs btn-default"><span
-                                        class="glyphicon glyphicon-envelope"></span>&nbsp;rend:{useremail:javajigi@slipp.net}</a>
+                                        class="glyphicon glyphicon-envelope"></span>&nbsp;rend:{useremail: }</a>
                             </p>
                         </div>
                     </div>
