--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,8 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="./user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li><a href="rend:{hrefIndex:../index.html}"><i class="glyphicon glyphicon-user"></i></a>
+                </li>
             </ul>
         </div>
     </div>
